make links black, right-align registration form, fix casing in some fields

--- a/gcc_mobile/src/App.css
+++ b/gcc_mobile/src/App.css
@@ -14,6 +14,11 @@
 }
 
 /* default styles */
+a {
+  color: black !important;
+  font-weight: bold;
+}
+
 h1,
 h2,
 h3,
